# vanilla-folder

./: README.md
public/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
