[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "Tauri Programme within The Commons Conservancy" ]
repository = ""
edition = "2021"
rust-version = "1.56"

[dependencies]
tauri = { version = "1.2.2", features = ["dialog-open", "fs-read-dir", "fs-read-file", "protocol-asset"] }
tauri-plugin-persisted-scope = { git = "https://github.com/OrIOg/tauri-plugin-persisted-scope", features = ["protocol-asset"] }

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
